--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <audio id="audio" src="./res/sound/sound.mp3"></audio>
+    <audio id="audio" src="./res/sound/sound-2.mp3"></audio>
     <img class="fondo" src="./res/img/Fondo03.png" alt="fondo estrellado">
     <div class="contenedor">
         <div class="seccion arriba">
