--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>TutiFruti</title>
     <meta name="description" content="Descripción breve del sitio, preferiblemente menos de 160 caracteres.">
     <meta name="keywords" content="palabras clave, relacionadas, con el contenido">
-    <meta name="author" content="Tu Nombre o Compañía">
+    <meta name="author" content="PastelitoSoft">
 
     <!-- Favicon -->
     <link rel="icon" href="./res/img/favicon.ico" type="image/x-icon">
